--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tiptap/extension-image": "^2.5.9",
+    "@tiptap/extension-mention": "^2.5.9",
+    "@tiptap/starter-kit": "^2.5.9",
+    "@tiptap/vue-3": "^2.5.9",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuetify": "^3.7.0-beta.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
+    "csv-loader": "^3.0.5",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "typescript": "^5.5.4",
+    "vue-router": "^4.0.13",
+    "vue-template-compiler": "2.6.10",
+    "webpack": "^5.93.0"
   },
   "eslintConfig": {
     "root": true,
