--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tiptap/vue-3": "^2.5.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "pinia": "^2.2.1",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vuetify": "^3.7.0-beta.1",
